--- a/src/app/page-not-found/page-not-found.component.html
+++ b/src/app/page-not-found/page-not-found.component.html
@@ -1,1 +1,12 @@
-<p>page-not-found works!</p>
+<h3>
+    Page Not Found
+</h3>
+
+<br>
+<br>
+
+<button
+    (click)="startOver()"
+>
+    Start Over
+</button>
