Service for shared data with behavior ! ! !

--- a/src/app/add-student/add-student.component.html
+++ b/src/app/add-student/add-student.component.html
@@ -2,10 +2,15 @@
     Add Student
 </h3>
 
-Coming soon... 
+<input 
+    type="text"
+    placeholder="Enter student name"
+    [(ngModel)]="studentName"
+/>
 
 <br>
 <br>
+
 <button
     (click)="addStudent()"
 >
